# cpack_tricks

./: CMakeLists.txt  qt.conf.in
cmake/: 3rdparty.cmake
cmake/helpers/: cpack_helpers.cmake
cmake/modules/: FindGMock.cmake  FindQt5QuickTemplates2.cmake
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/types/: definitions.h  types.h
src/common/src/types/: definitions.cpp
src/common/test/: CMakeLists.txt
src/datamodels/: CMakeLists.txt
src/datamodels/include/: location_image_handler.h  location_image_provider.h  location_model.h  models_factory.h
src/datamodels/src/: location_image_handler.cpp  location_image_provider.cpp  location_model.cpp  models_factory.cpp
src/datamodels/test/: CMakeLists.txt
src/launcher/: CMakeLists.txt
src/launcher/src/: main.cpp
src/launcher/src/core/: app_core.cpp  app_core.h
src/launcher/ui/: launcher.qrc  main.qml
src/launcher/ui/modules/AppFlow/: AppUI.qml  FontStyle.qml  LocationDelegate.qml  LocationManagement.qml  MainSideNavigationPanel.qml  NumberHelpers.js  qmldir
src/products/: CMakeLists.txt
src/products/enterprise/: CMakeLists.txt
src/products/enterprise/predefined/: location_model.xml
src/products/home/: CMakeLists.txt
src/products/home/predefined/: location_model.xml
